[package]
name = "bevy-rpg-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: bevy-inspector-gui has been updated for bevy 0.11. add it back.
strum = "0.25"
strum_macros = "0.25"
rand = "0.8.5"

[dependencies.bevy]
version = "0.11"
features = [
  "dynamic_linking",
  "wav",
  "wayland"
]

[profile.dev.package."*"]
opt-level = 3